# llm_tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  resources
data/: README.md
docs/: setup.md
shared/: __init__.py  errors.py  utils.py
step1_tokenizer/: README.md  tokenizer.py  tokenizer_exercise.py  tokenizer_solution.py  train_bpe.py  tutorial.ipynb
step2_gpt_model/: README.md  model.py  model_exercise.py  model_solution.py  tutorial.ipynb
step3_pretrain/: README.md  data_exercise.py  data_solution.py  train_exercise.py  train_solution.py  tutorial.ipynb
step4_sft/: README.md  data_exercise.py  data_solution.py  train_lora_solution.py  train_sft.py  train_sft_solution.py  tutorial.ipynb
step5_rlhf/: README.md  data.py  data_solution.py  train_dpo_exercise.py  train_dpo_solution.py  tutorial.ipynb
step6_vlm/: README.md  model.py  model_exercise.py  model_solution.py  train.py  train_solution.py  tutorial.ipynb
tests/: test_model.py  test_shared.py  test_tokenizer.py
